--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.0",
     "button": "^1.1.1",
     "react": "^17.0.2",
+    "react-d3-speedometer": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "router-dom": "^2.2.9",
